fim da aula 3/9/19

--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Treinando</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
-        
+        <a href="">começando</a>
+        <a href="">no</a>
+        <a href="">pc</a>
+        <a href="">novo</a>
     </nav>
+    <header>
+        <h1>Treinando Bem</h1>
+    </header>
+    <section>
+        <img src="images/skate or die.jpg" alt="skate é arte">
+            <p>Acima de tudo, é fundamental ressaltar que a execução dos pontos do programa prepara-nos para enfrentar situações atípicas decorrentes dos modos de operação convencionais.</p>
+        <img src="images/skate2.jpg" alt="">
+            <p>Podemos já vislumbrar o modo pelo qual o novo modelo estrutural aqui preconizado acarreta um processo de reformulação e modernização do impacto na agilidade decisória</p>
+    </section>
 </body>
 </html>
